src/routes/portfolio/project-card/project.styles.scss
@import "../../../globals/_theme";
@import "../../feedback/feedback.styles.scss";
$buttonTransitionTime: 0.1s;
%test {
  position: absolute;
  content: "";
  transition: all $buttonTransitionTime;
}

.card-container {
  display: flex;
  flex-direction: column;
  transform: translate(-2%, -2%);
  font-family: $theme-font;
  text-decoration: none;
  min-width: 355px;
  font-size: 3vh;
  transition: all 0.6s, background-color $theme-transition;
  border-width: 0px;
  height: 35vh;
  width: 40vw;

  @media screen and (max-width: (calc($smallScreenWidth + 80px))) {
    width: 95%;
  }

  @include themed() {
    background-color: t($primary);
  }
  &:hover {
    transform: translate(-5%, -5%);
    @include themed() {
      box-shadow: 33px 33px 12px t($shadow-color);
    }

    @media screen and (max-width: $smallScreenWidth) {
      transform: translate(-2%, -2%);
    }
  }

  &::before {
    //bottom side
    @extend %test;
    bottom: -15px;
    height: 15px;
    width: 100%;
    left: 8px;
    transform: skewX(45deg);
    transition: all $buttonTransitionTime, background-color $theme-transition;
    @include themed() {
      background-color: darken(t($primary), 11%);
    }
  }

  &::after {
    // right side
    @extend %test;
    right: -15px;
    height: 100.5%;
    width: 15px;
    bottom: -8px;
    transform: skewY(45deg);
    transition: all $buttonTransitionTime, background-color $theme-transition;
    @include themed() {
      background-color: darken(t($primary), 30%);
    }
  }

  .project-image {
    position: relative;
    width: 100%;
    height: 85%;
    z-index: 0;

    .bgImage {
      object-fit: cover;
      transition: filter 0.2s ease-in-out;
      width: 100%;
      height: 100%;
    }

    &:hover .bgImage {
      filter: brightness(0.3) blur(3px);
      -webkit-filter: brightness(0.3) blur(3px);
    }

    .text-box {
      display: flex;
      flex-direction: column;
      position: relative;
      color: #dcdff1;
      display: none;
      position: absolute;
      line-height: 1.35em;
      font-size: 0.8em;
      width: 97%;
      height: 93%;
      margin: 10px;
      margin-top: 7px;
      z-index: 1;
      transition: opacity 0.3s ease-in-out;
      overflow-y: auto;
      overscroll-behavior: contain;

      .desc {
        padding-bottom: 5px;
        padding-right: 2px;
      }

      .techs {
        display: flex;
        gap: 4px;
        align-items: center;
        justify-content: flex-end;

        .tech-icon {
          pointer-events: auto;
          height: 1.6em;
          width: 1.6em;
        }
      }
    }

    &:hover .text-box {
      display: block;
    }
  }

  .project-title {
    transition: all $theme-transition;
    display: flex;
    flex-direction: row;
    cursor: pointer;
    width: 98.5%;
    padding-left: 1.5%;
    align-items: center;
    flex: 1;
    z-index: 1;
    text-decoration: none;
    @include themed() {
      box-shadow: 1px -4px 15px t($shadow-color);
      color: darken(t($text-color), 11%);
    }
  }
}

